--- a/editor/index.html
+++ b/editor/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samsung Remotion Editor</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
       * {
         margin: 0;
@@ -14,7 +11,7 @@
         box-sizing: border-box;
       }
       body {
-        font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
+        font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, sans-serif;
         background: #1a1a1a;
         color: #fff;
         -webkit-font-smoothing: antialiased;
